// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityLikeComponent should display as liked if LikedByCurrentUser === true 1`] = `
<pf-community-like
  LikedByCurrentUser={[Function Boolean]}
  MAX_LIKES_TO_DISPLAY={[Function Number]}
  communityLikeLoadedSubscription={[Function Subscriber]}
  communityLikeLoadingSubscription={[Function Subscriber]}
  communityLikeUserInfos={[Function Array]}
  communityLikes$={[Function Store]}
  communityLikesLoading$={[Function Store]}
  loadingLikes="false"
  store={[Function Store]}
>
  <span
    class="community-like p-0 community-btn-clicked"
    data-qa-id="ctn-communityLikePost"
    id="like-reply"
    placement="auto"
  >
    
    <span>
      <fa-icon
        class="liked-by-current-user"
        icon="heart"
      />
    </span>
    
    <span
      data-qa-id="cnt-likeCount"
    >
        Like
    </span>
  </span>
</pf-community-like>
`;

exports[`CommunityLikeComponent should display as not liked if LikedByCurrentUser === false 1`] = `
<pf-community-like
  LikedByCurrentUser="false"
  MAX_LIKES_TO_DISPLAY={[Function Number]}
  communityLikeLoadedSubscription={[Function Subscriber]}
  communityLikeLoadingSubscription={[Function Subscriber]}
  communityLikeUserInfos={[Function Array]}
  communityLikes$={[Function Store]}
  communityLikesLoading$={[Function Store]}
  loadingLikes="false"
  store={[Function Store]}
>
  <span
    class="community-like p-0 community-btn"
    data-qa-id="ctn-communityLikePost"
    id="like-reply"
    placement="auto"
  >
    
    
    <span>
      <fa-layers>
        <fa-icon
          icon="heart"
        />
        <fa-icon
          icon="heart"
          transform="shrink-4"
        />
      </fa-layers>
    </span>
    <span
      data-qa-id="cnt-likeCount"
    >
        Like
    </span>
  </span>
</pf-community-like>
`;

exports[`CommunityLikeComponent should show like component 1`] = `
<pf-community-like
  MAX_LIKES_TO_DISPLAY={[Function Number]}
  communityLikeLoadedSubscription={[Function Subscriber]}
  communityLikeLoadingSubscription={[Function Subscriber]}
  communityLikeUserInfos={[Function Array]}
  communityLikes$={[Function Store]}
  communityLikesLoading$={[Function Store]}
  loadingLikes="false"
  store={[Function Store]}
>
  <span
    class="community-like p-0 community-btn"
    data-qa-id="ctn-communityLikePost"
    id="like-reply"
    placement="auto"
  >
    
    
    <span>
      <fa-layers>
        <fa-icon
          icon="heart"
        />
        <fa-icon
          icon="heart"
          transform="shrink-4"
        />
      </fa-layers>
    </span>
    <span
      data-qa-id="cnt-likeCount"
    >
        Like
    </span>
  </span>
</pf-community-like>
`;
